--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "node index.js"
   },
   "author": "Prashant Bhardwaj",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "request": "^2.83.0"
+  }
 }
